Doc/force-app/main/default/objects/Intapp_Pricing__c/Intapp_Pricing__c.object-meta.xml
<CustomObject>
    <label>Intapp Pricing</label>
    <nameField>
        <label>Intapp Pricing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Intapp Pricings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>