Doc/force-app/main/default/objects/Intapp_Pricing__c/fields/Bundle_Discount__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bundle Discount</label>
    <type>Checkbox</type>
</CustomField>