Doc/force-app/main/default/objects/Intapp_Pricing__c/fields/G_Cloud__c.field-meta.xml
<CustomField>
    <fullName>G_Cloud__c</fullName>
    <defaultValue>false</defaultValue>
    <label>G-Cloud</label>
    <type>Checkbox</type>
</CustomField>