Doc/force-app/main/default/objects/Intapp_Pricing__c/fields/Gold_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Gold_Pricing__c</fullName>
    <description>Field to hold pricing that includes gold support</description>
    <label>Gold Pricing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>