Doc/force-app/main/default/objects/Intapp_Pricing__c/fields/Intapp_ID__c.field-meta.xml
<CustomField>
    <fullName>Intapp_ID__c</fullName>
    <description>This will hold the OP4I Internal ID - to keep the mapping in sync between both the systems Intapp Pricing Object</description>
    <label>Intapp ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>