Doc/force-app/main/default/objects/Intapp_Pricing__c/fields/Legal_Sales__c.field-meta.xml
<CustomField>
    <fullName>Legal_Sales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legal Sales</label>
    <type>Checkbox</type>
</CustomField>