Doc/force-app/main/default/objects/Intapp_Pricing__c/fields/Meter_Type__c.field-meta.xml
<CustomField>
    <fullName>Meter_Type__c</fullName>
    <description>field to hold value of Meter type. Supports pricing by meter type</description>
    <label>Meter Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fee Earners</fullName>
            </value>
            <value>
                <fullName>Lawyers</fullName>
            </value>
            <value>
                <fullName>Revenue</fullName>
            </value>
            <value>
                <fullName>Named Users</fullName>
            </value>
            <value>
                <fullName>Records</fullName>
            </value>
            <value>
                <fullName>Employees</fullName>
            </value>
            <value>
                <fullName>Asset</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>