Doc/force-app/main/default/objects/Intapp_Pricing__c/fields/OP4I_Pricebook__c.field-meta.xml
<CustomField>
    <fullName>OP4I_Pricebook__c</fullName>
    <formula>IF(Repstor__c == true,Price_book_Code__c &amp; &apos; &apos; &amp; &apos;Repstor;&apos; , &apos;&apos;) &amp;

IF(FS_Ops_Only__c == true,Price_book_Code__c &amp; &apos; &apos; &amp; &apos;FS Ops Only;&apos; , &apos;&apos;) &amp;

IF(PS_Ops_Only__c == true,Price_book_Code__c &amp; &apos; &apos; &amp; &apos;PS Ops Only;&apos; , &apos;&apos;) &amp;

IF(G_Cloud__c == true,Price_book_Code__c &amp; &apos; &apos; &amp; &apos;G-Cloud;&apos; , &apos;&apos;) &amp;

IF(FS_Sales__c == true,Price_book_Code__c &amp; &apos; &apos; &amp; &apos;FS Sales;&apos; , &apos;&apos;) &amp;

IF(PS_Sales__c== true,Price_book_Code__c &amp; &apos; &apos; &amp; &apos;PS Sales;&apos; , &apos;&apos;) &amp;

IF(Legal_Sales__c== true,Price_book_Code__c &amp; &apos; &apos; &amp; &apos;Legal Sales;&apos; , &apos;&apos;) &amp;

IF(A_C_Sales__c== true,Price_book_Code__c &amp; &apos; &apos; &amp; &apos;AC Sales;&apos; , &apos;&apos;) &amp;

IF(Corporate_Sales__c== true,Price_book_Code__c &amp; &apos; &apos; &amp; &apos;Corporate Sales;&apos; , &apos;&apos;) &amp;

IF(Ops_Only__c== true,Price_book_Code__c &amp; &apos; &apos; &amp; &apos;Ops Only;&apos;, &apos;&apos;) &amp;

IF(Partner_Sales__c == true, Price_book_Code__c &amp; &apos; &apos; &amp; &apos;Partner Sales; &apos; , &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OP4I Pricebook</label>
    <type>Text</type>
</CustomField>