Doc/force-app/main/default/objects/Intapp_Pricing__c/fields/OP4I_SF_Combined_Pricebook__c.field-meta.xml
<CustomField>
    <fullName>OP4I_SF_Combined_Pricebook__c</fullName>
    <formula>IF( ISBLANK(OP4I_Pricebook__c) ,  Price_book_rule__c ,OP4I_Pricebook__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OP4I SF Combined Pricebook</label>
    <type>Text</type>
</CustomField>