Doc/force-app/main/default/objects/Intapp_Pricing__c/fields/Ops_Only__c.field-meta.xml
<CustomField>
    <fullName>Ops_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ops Only</label>
    <type>Checkbox</type>
</CustomField>