Doc/force-app/main/default/objects/Intapp_Pricing__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <description>Field holds the value of price including support</description>
    <label>Standard Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>