Doc/force-app/main/default/objects/Intapp_Pricing__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Intapp Pricings</relationshipLabel>
    <relationshipName>Intapp_Pricings</relationshipName>
    <type>Lookup</type>
</CustomField>