Doc/force-app/main/default/objects/Intapp_Pricing__c/fields/PS_Sales__c.field-meta.xml
<CustomField>
    <fullName>PS_Sales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PS Sales</label>
    <type>Checkbox</type>
</CustomField>