Doc/force-app/main/default/objects/Intapp_Pricing__c/fields/Quantity_Low__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Low__c</fullName>
    <label>Quantity Low</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>