Doc/force-app/main/default/objects/Intapp_Pricing__c/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <label>Tier</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier A</fullName>
            </value>
            <value>
                <fullName>Tier B</fullName>
            </value>
            <value>
                <fullName>Tier C</fullName>
            </value>
            <value>
                <fullName>Tier D</fullName>
            </value>
            <value>
                <fullName>Tier E</fullName>
            </value>
            <value>
                <fullName>Tier (none)</fullName>
            </value>
            <value>
                <fullName>EM1</fullName>
            </value>
            <value>
                <fullName>EM2</fullName>
            </value>
            <value>
                <fullName>EM3</fullName>
            </value>
            <value>
                <fullName>EM4</fullName>
            </value>
            <value>
                <fullName>EM5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>