Doc/force-app/main/default/objects/Intapp_Pricing__c/validationRules/Enforce_Required_Fields_After_August2024.validationRule-meta.xml
<ValidationRule>
    <fullName>Enforce_Required_Fields_After_August2024</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISNEW(),
    TODAY() &gt;= DATE(2024, 8, 1),
    OR(
        ISBLANK(Product_Code__c),
        ISBLANK(Tier__c),
        ISBLANK(Price__c),
        ISBLANK(Price_Book__c)
    )
)</errorConditionFormula>
    <errorMessage>Product Code, Tier, Price, and Price Book must be populated for records created on or after August 1, 2024.</errorMessage>
</ValidationRule>