Doc/force-app/main/default/objects/Intapp_Pricing__c/listViews/ANDY.listView-meta.xml
<ListView>
    <fullName>ANDY</fullName>
    <columns>NAME</columns>
    <columns>Intapp_ID__c</columns>
    <columns>Premium_Intapp_ID__c</columns>
    <columns>Price__c</columns>
    <columns>Premium_price__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Meter_Type__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Tier__c</columns>
    <columns>OP4I_Pricebook__c</columns>
    <columns>Price_book_rule__c</columns>
    <columns>FS_Sales__c</columns>
    <columns>Ops_Only__c</columns>
    <columns>A_C_Sales__c</columns>
    <columns>Legal_Sales__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Code__c</field>
        <operation>equals</operation>
        <value>EC-02124</value>
    </filters>
    <filters>
        <field>Price_Book__c</field>
        <operation>equals</operation>
        <value>FY26_All_Products</value>
    </filters>
    <label>ANDY</label>
</ListView>